--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "classnames": "^2.2.6",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
   }
 }
